# c-boil

./: .gitignore  CMakeLists.txt  LICENSE  README.md
scripts/: bootstrap.sh  newSubDir.sh
src/: CMakeLists.txt  cb.c  cb.h  config.h.in
src/meta/: CMakeLists.txt  meta.h  meta.h.in
src/skeleton/: CMakeLists.txt  skeleton.c  skeleton.h
src/util/: CMakeLists.txt  util.c  util.h
